fix(Pill): Adjust spacing

--- a/react/Pill/Pill.less
+++ b/react/Pill/Pill.less
@@ -15,7 +15,7 @@
   height: @staticTagHeight;
   line-height: @staticTagHeight;
   padding: 0 15px;
-  margin: @row-height 15px @row-height 0;
+  margin: @row-height 10px @row-height 0;
 }
 
 .interactivePill {
